[tool.poetry]
name = "git-orca-python"
version = "0.1.0"
description = "This a CLI tool to fetch issues and PRs from any repo"
authors = ["lennox charles <lennyaiko17@gmail.com>"]
maintainers = ["lennox charles <lennyaiko17@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lennyAiko/git-orca-python"
repository = "https://github.com/lennyAiko/git-orca-python"
keywords = ["github", "issues", "git", "tool", "pr", "CLI"]
packages = [{include = "git-orca"}]

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2023.7.22"
charset-normalize = "3.2.0"
click = "8.1.7"
colorama = "0.4.6"
idna = "3.4"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
Pygments = "2.16.1"
python-dotenv = "1.0.0"
requests = "2.31.0"
rich = "13.5.2"
shellingham = "1.5.3"
typer = "0.9.0"
typing_extensions = "4.7.1"
urllib3 = "2.0.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lennyAiko/git-orca-python/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
